--- a/src/components/content.less
+++ b/src/components/content.less
@@ -34,6 +34,7 @@
     .intro-text;
 
     width: 100%;
+    overflow-y: scroll;
     padding: calc(100vh / 5) 50px 0 400px;
 
     position: fixed;
@@ -43,6 +44,8 @@
     margin: 0;
 
     pointer-events: none;
+
+    z-index: -1;
   }
 
   .invisible {
