--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,8 +11,14 @@ html {
 .App {
   font-family: 'Muli', sans-serif;
   color: #ffffff;
+}
+.App .background {
   background: #162d50;
-  height: 5000px;
+  z-index: -1000;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 #navbar-container {
   position: fixed;
@@ -32,7 +38,7 @@ html {
   position: absolute;
   width: 300%;
   height: 100vh;
-  background-image: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #02193c 65%);
+  background-image: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #050f23 65%);
   z-index: -1;
   pointer-events: none;
 }
@@ -100,12 +106,14 @@ html {
   padding-top: calc(100vh / 5);
   min-height: 100vh;
   width: 100%;
+  overflow-y: scroll;
   padding: calc(100vh / 5) 50px 0 400px;
   position: fixed;
   top: 0;
   right: 0;
   margin: 0;
   pointer-events: none;
+  z-index: -1;
 }
 .content .iam .intro-text-container {
   display: flex;
